--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "postgres": "^3.4.7"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/express": "^5.0.5",
     "@types/morgan": "^1.9.10",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "@types/pg": "^8.15.6",
     "nodemon": "^3.1.10",
