--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "@types/pg": "^8.15.6",
+    "baseline-browser-mapping": "^2.8.32",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "ts-node": "^10.9.2",
