--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
+    "fuse.js": "^7.1.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
