--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5",
@@ -47,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.6",
     "eslint": "^9",
