--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "echo STARTING CLIENT on port 3000 && next dev -p 3000",
-    "build": "next build",
+     "build": "next build --no-turbo",
     "start": "next start",
     "lint": "eslint"
   },
