--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "echo STARTING CLIENT on port 3000 && next dev -p 3000",
-     "build": "next build --no-turbo",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -56,5 +56,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "lightningcss-linux-x64-gnu": "^1.30.2"
   }
 }
